add cmd client for playground test
